# netbolt

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  speed_test.rs
